[tool.poetry.scripts]
app = "app.cli:main"

[tool.poetry]
name = "App"
version = "0.1.0"
authors = ["Nome Autor <email@do_autor.com.br>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
requests = "^2.32.5"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.44"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
typer = "^0.20.0"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"